# crystal

./: README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: main.yml
src/: App.css  App.tsx  data_context.tsx  error_boundary.tsx  layout.tsx  lobby.tsx  main.tsx  pages_config.ts  sidebar.tsx  status_bar.tsx  theme-provider.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: api_button.tsx  champion_detail_card.tsx  champion_mastery_icon.tsx  filter_dropdown.tsx
src/components/ui/: badge.tsx  dialog.tsx  sidebar.tsx
src/hooks/: use-optimal-path.ts  use-persisted-state.ts
src/lib/: challenges.ts  loading_state.ts  optimal-path.ts  utils.ts
src/pages/: champions.tsx  debug.tsx  eternals.tsx  lobby.tsx  mastery.tsx  profile.tsx  settings.tsx  skins.tsx  team_builder.tsx  user.tsx
supabase/functions/_shared/: update_db.ts
supabase/functions/challenge-info/: index.ts
supabase/functions/get-user/: index.ts
supabase/functions/update-user/: index.ts
