[package]
name = "crystal"
description = "Challenge Tracker Assistant"
authors = ["cyan"]
version = "3.7.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and prevent conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crystal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
# serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
irelia = "0.11.0"
tokio = { version = "1", features = ["full"] }
# tokio-macros = "2.5.0"
# serde_derive = "1.0.217"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-clipboard-manager = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
